--- a/index.html
+++ b/index.html
@@ -962,9 +962,7 @@ const genderClass =
     "ring-slate-300";
 
 document.getElementById('detail-content').innerHTML = `
-document.getElementById('detail-content').innerHTML = `
-        <div class="p-5 rounded-3xl shadow-lg border transition-colors duration-300" 
-             style="background-color: var(--card-bg); border-color: var(--border-color);">
+        <div class="p-5 rounded-3xl shadow-lg border transition-colors duration-300" style="background-color: var(--card-bg); border-color: var(--border-color);">
 
             <div class="flex flex-col items-center">
                 <div class="relative">
