--- a/index.html
+++ b/index.html
@@ -1018,11 +1018,11 @@ document.getElementById('detail-content').innerHTML = `
     document.getElementById('detail-modal').style.display = 'flex';
     }
 
-   function renderDetailItem(label, value) {
+function renderDetailItem(label, value) {
     return `
-        <div class="px-2 py-1 border-b border-slate-100 flex justify-between items-start gap-2">
-            <p class="text-[9px] font-black text-slate-400 uppercase whitespace-nowrap pt-[2px]">${label}</p>
-            <p class="text-[11px] font-semibold text-slate-700 text-right leading-tight">${value || '-'}</p>
+        <div class="flex justify-between items-start gap-4">
+            <span class="text-[10px] font-bold uppercase tracking-tight" style="color: var(--text-muted);">${label}</span>
+            <span class="text-[11px] font-semibold text-right" style="color: var(--text-main);">${value || '-'}</span>
         </div>
     `;
 }
