--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       --card-bg: #ffffff;
       --text-main: #334155;
       --text-muted: #64748b;
-      --border-color: #f1f5f9;
-      --input-bg: #f8fafc;
+      --border-color: #cbd5e1;
+      --input-bg: #ffffff;    
     }
 
     /* Variabel Khusus Dark Mode */
@@ -45,7 +45,7 @@
       --card-bg: #1e293b; /* Slate 800 */
       --text-main: #f1f5f9; /* Slate 100 */
       --text-muted: #94a3b8; /* Slate 400 */
-      --border-color: #334155; /* Slate 700 */
+      --border-color: #334155; 
       --input-bg: #0f172a;
     }
 
@@ -122,9 +122,9 @@ body.dark span:not(.material-icons) {
     width: 100%;
     padding: 12px 16px;
     background-color: var(--input-bg) !important; /* Gunakan variabel */
-    border: 1px solid var(--border-color) !important; /* Gunakan variabel */
+    border: 2px solid var(--border-color) !important; /* Gunakan variabel */
     border-radius: 16px;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 600;
     color: var(--text-main) !important; /* Gunakan variabel */
     outline: none;
