--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body.dark span:not(.material-icons) {
 
     .modern-input {
     width: 100%;
-    padding: 12px 16px;
+    padding: 12px 16px 12px 35px;
     background-color: var(--input-bg) !important; /* Gunakan variabel */
     border: 1.5px solid var(--border-color) !important; /* Gunakan variabel */
     border-radius: 16px;
