--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ body.dark span:not(.material-icons) {
 
     /* Memperbaiki warna teks item nav agar tidak hilang */
     .nav-item { 
-      color: var(--text-muted); /* Menggunakan variabel teks redup */
+      color: var(--text-muted); 
       display: flex; 
       flex-direction: column; 
       align-items: center; 
@@ -206,16 +206,36 @@ body.dark span:not(.material-icons) {
       text-transform: uppercase; 
       border: none; 
       background: none; 
-      outline: none; 
-      transition: color 0.3s, transform 0.2s;
+      outline: none;
+      padding: 8px 12px;
+      border-radius: 16px;
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); /* Efek pegas */
+      cursor: pointer;
+    }
+/* Efek Hover: Bergeser ke atas sedikit dan muncul background halus */
+    .nav-item:hover {
+      color: var(--soft-indigo);
+      transform: translateY(-5px);
+      background-color: rgba(99, 102, 241, 0.08); /* Indigo transparan */
     }
 
-    .nav-item.active { 
-      color: var(--pastel-active); 
+    /* Efek Klik (Active State) */
+    .nav-item:active {
+      transform: scale(0.9);
     }
 
+    /* Icon Animation pada Hover */
+    .nav-item:hover .material-icons {
+      transform: scale(1.1);
+      filter: drop-shadow(0 4px 8px rgba(99, 102, 241, 0.3));
+    }
+/* Penyesuaian Dark Mode Hover */
+    body.dark .nav-item:hover {
+      background-color: rgba(255, 255, 255, 0.05);
+      color: var(--pastel-active);
+    }
     /* Memperbaiki tombol tambah tengah agar bordernya tidak putih mencolok di dark mode */
-    .btn-add-center { 
+  .btn-add-center { 
       background: var(--pastel-primary); 
       color: white; 
       width: 58px; 
@@ -225,11 +245,20 @@ body.dark span:not(.material-icons) {
       align-items: center; 
       justify-content: center; 
       transform: translateY(-22px); 
-      box-shadow: 0 10px 18px rgba(99,102,241,0.3); 
-      /* Border mengikuti warna background agar serasi */
+      box-shadow: 0 10px 18px rgba(99, 102, 241, 0.3); 
       border: 4px solid var(--card-bg); 
       cursor: pointer; 
-      transition: all 0.3s;
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); /* Efek membal */
+    }
+
+    .btn-add-center:hover {
+      transform: translateY(-28px) scale(1.1) rotate(90deg); /* Berputar saat hover */
+      box-shadow: 0 15px 25px rgba(99, 102, 241, 0.5);
+      background: var(--soft-indigo);
+    }
+
+    .btn-add-center:active {
+      transform: translateY(-22px) scale(0.9);
     }
 
     /* Penyesuaian shadow saat hover di mode dark */
