--- a/index.html
+++ b/index.html
@@ -1007,10 +1007,11 @@ function switchStatTab(tab) {
             <div class="warga-card" onclick="showDetail('${w.NIK}')">
                 <div class="avatar ${(w.Kelamin || '').toLowerCase().startsWith('l') ? 'bg-indigo-400' : 'bg-pink-400'}">${(w.Nama || 'W')[0]}</div>
                 <div class="flex-1"><h4 class="text-xs font-extrabold text-slate-800">${w.Nama}</h4><p class="text-[9px] font-bold text-slate-400 uppercase">NIK: ${w.NIK}</p></div>
-                <span class="text-[8px] font-black px-2 py-1 bg-slate-100 text-slate-500 rounded-lg dark:bg-slate-700 dark:text-slate-300">RT 0${w.RT || '-'}</span>`
-         
+                 <span class="text-[8px] font-black px-2 py-1 bg-slate-50 rounded-lg text-slate-400">RT 0${w.RT || '-'}</span>
+            </div>
         `).join('');
     }
+
 
     // Ambil inisial nama (maks 2 huruf)
 function getInitials(name) {
