--- a/index.html
+++ b/index.html
@@ -379,6 +379,9 @@ body.dark span:not(.material-icons) {
     background-color: #f5adbe !important; /* Warna pink soft */
     color: white !important;
 }
+    body.dark #modal-ultah button[style*="background-color: #f5adbe"] {
+    box-shadow: 0 4px 15px rgba(245, 173, 190, 0.3);
+}
   </style>
 </head>
 <body>
