--- a/index.html
+++ b/index.html
@@ -1839,7 +1839,7 @@ function closePhotoViewer() {
     const roleCapitalized = userData.role.charAt(0).toUpperCase() + userData.role.slice(1);
     const rtInfo = userData.rt ? ` - RT 0${userData.rt}` : "";
     
-    textElement.innerHTML = `Halo, <span class="font-bold text-slate-800">${roleCapitalized}${rtInfo}</span> • Sesi Aktif`;
+    textElement.innerHTML = `Halo, <span class="font-bold text-slate-800">${roleCapitalized}${rtInfo}</span>`;
 }
     
   </script>
