--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ body.dark span:not(.material-icons) {
                     <option value="Kepala Keluarga">Kepala Keluarga</option><option value="Istri">Istri</option><option value="Anak">Anak</option><option value="Orang Tua">Orang Tua</option><option value="Lainnya">Lainnya</option>
                 </select>
             </div>
-            <div><label class="form-label" style="color: var(--text-muted)">No HP / WA<span class="required-icon">*</span></label><input type="number" id="f-hp" class="modern-input" required></div>
+            <div><label class="form-label" style="color: var(--text-muted)">No HP / WA<span class="required-icon">*</span></label><input type="number" id="f-hp" class="modern-input"></div>
         </div>
 
         <div class="space-y-2">
