--- a/index.html
+++ b/index.html
@@ -1865,7 +1865,7 @@ function closePhotoViewer() {
     const roleName = userData.role.toUpperCase();
     const rtInfo = userData.rt ? `RT 0${userData.rt}` : "RW 06";
     
-    textElement.innerHTML = `SESI: <span class="text-indigo-500">${roleName}</span> • ${rtInfo}`;
+    textElement.innerHTML = `HALO: <span class="text-indigo-500">${roleName}</span> • ${rtInfo}`;
 }
     
   </script>
