--- a/index.html
+++ b/index.html
@@ -555,6 +555,7 @@ body.dark span:not(.material-icons) {
                         <option value="ALL">Semua</option>
                         <option value="TETAP">Tetap</option>
                         <option value="KONTRAK">Kontrak</option>
+                        <option value="KOS">Kos</option>
                     </select>
                 </div>
                 <div>
