--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@ body.dark span:not(.material-icons) {
     <div class="absolute bottom-0 left-0 right-0 bg-white rounded-t-[40px] p-8 animate-in slide-in-from-bottom duration-300">
         <div class="w-12 h-1.5 bg-slate-200 rounded-full mx-auto mb-6"></div>
         
-        <h3 class="text-lg font-black text-slate-800 mb-1">Ekspor Data</h3>
-        <p class="text-[10px] font-bold text-slate-400 uppercase tracking-widest mb-6">Pilih filter data yang diinginkan</p>
+        <h3 class="text-lg font-black text-slate-800 dark:text-slate-100 mb-1">Ekspor Data</h3>
+        <p class="text-[10px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-widest mb-6">Pilih filter data yang diinginkan</p>
 
         <div class="space-y-4">
             <div>
